Scrollbar Fix Envr Settings (hopefully)
and size adjustment for menu length

--- a/Shared/Components/VaryingComponent.razor.css
+++ b/Shared/Components/VaryingComponent.razor.css
@@ -47,7 +47,7 @@
     justify-content: center;
     background-color: lightgray;
     padding: 5px;
-    max-height: 400px; /* Max height for scrollable container, adjusting later to fit around 3 settings */
+    max-height: 350px; /* Max height for scrollable container, adjusting later to fit around 3 settings */
     width: 250px;
     overflow-y: scroll;
     border-radius: 1rem 1rem 1rem 1rem;
@@ -59,9 +59,8 @@
 }
 
 .EnvironmentalSettingsClass {
-    max-height: 400px; 
+    max-height: 350px; 
     width: 250px;
-    overflow-y: scroll;
     flex-direction: column;
     translate: 600px 100px;
     padding-bottom: 5px;
@@ -72,6 +71,7 @@
     font-size: 19px;
     flex-direction: row;
     padding-top: 1px;
+    overflow-y: scroll;
 }
 
 .valueSetting h2, .dropdownSetting h2 {
